# Libreria

./: .gitignore  README.md  main.py  pyproject.toml
Libreria/: Main.py  Montoya.py  libreria.py
Libreria.egg-info/: PKG-INFO  SOURCES.txt
Libreria/Audio/: audio.py  normalizador.py  stt.py
Libreria/Gramatica/: lexer.py  parser.py
Libreria/IA/: IA.py  gemini.py  ia.py  openRouter.py  prompBuilder.py  promptBuilder.py
Libreria/Voz/: tts.py
tests/: test_IA.py  test_audio.py  test_gramatica.py  test_todo.py
thepibbles/: Montoya.py  libreria.py
thepibbles/Audio/: stt.py
thepibbles/Gramatica/: parser.py
thepibbles/IA/: ia.py  openRouter.py
